; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_create_or_replace.c_CreateRenameStatement.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_create_or_replace.c_CreateRenameStatement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"unsupported object to construct a rename statement\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"unable to generate a parsetree for the rename\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @CreateRenameStatement to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @CreateRenameStatement(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @getObjectClass(i32* %6)
  switch i32 %7, label %16 [
    i32 129, label %8
    i32 128, label %12
  ]

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32* @CreateRenameProcStmt(i32* %9, i8* %10)
  store i32* %11, i32** %3, align 8
  br label %21

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32* @CreateRenameTypeStmt(i32* %13, i8* %14)
  store i32* %15, i32** %3, align 8
  br label %21

16:                                               ; preds = %2
  %17 = load i32, i32* @ERROR, align 4
  %18 = call i32 @errmsg(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @errdetail(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0))
  %20 = call i32 @ereport(i32 %17, i32 %19)
  br label %21

21:                                               ; preds = %8, %12, %16
  %22 = load i32*, i32** %3, align 8
  ret i32* %22
}

declare dso_local i32 @getObjectClass(i32*) #1

declare dso_local i32* @CreateRenameProcStmt(i32*, i8*) #1

declare dso_local i32* @CreateRenameTypeStmt(i32*, i8*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errdetail(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
